--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Beagle Blog</title>
 </head>
 <body>
-    <h1>Title Needed</h1>
-    <h1>heading added</h1>
-    <ul>apple</ul>
-    <ul>mango</ul>
-    <ul>orange</ul>
-    <ul>grapes</ul>
+    <h1><u>The Beagle Blog</u></h1>
+    <p>The <b><i>Beagle</i></b> is a breed of small scent hound, similar in appearance to the much larger foxhound. The <b><i>Beagle</i></b> was developed primarily for hunting hare, known as beagling. Possessing a great sense of smell and superior tracking instincts, the <b><i>Beagle</i></b> is the primary breed used as a detection dog for prohibited agricultural imports and foodstuffs in quarantine around the world. The <b><i>Beagle</i></b> is a popular pet due to its size, good temper, and a lack of inherited health problems.</p>
+    <a href="https://en.wikipedia.org/wiki/Beagle"><u>Read more</u></a>
+    <br>
+    <h1><u>Images</u></h1>
+    <img width="300px" height="200px" src="https://media.istockphoto.com/id/184102750/photo/beagle-puppy-standing-in-a-meadow.jpg?s=1024x1024&w=is&k=20&c=bF63eICb4mskyL3cDV5tnjhGGXbn3g6CVhTQCNnxQ5g=">
+    <br>
+    <a href="https://www.google.com/search?q=beagle&rlz=1C5CHFA_enUS944US945&sxsrf=ALiCzsYi_xLzuX5-mgRt-U2UMiiEwhaCTA:1672839794160&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiat8ntha78AhVnDbcAHX7UCYYQ_AUoAXoECAEQAw&biw=1629&bih=894&dpr=2.2"><u>Read more</u></a>
+    <br>
+    <h1><u>Trivia</u></h1>
+    <ol>
+        <li> Height - 13-16 in (33-41cm)</li>
+        <li> Weight - 22-25 lb (10.0-11.3kg)</li>
+        <li> Coat - Short haired, hard coat of medium length</li>
+        <li> Colour - Tricolor or white in combination with black & tan/brown or brown/tan </li>
+        <li> Life span - 12-15 years</li>
+    </ol>
+
 </body>
 </html>
